# django-ai-handwritten-notes

./: .gitignore  README.md  hello.py  manage.py  pyproject.toml
app_ai/: urls.py  views.py
handwritten_note/: asgi.py  settings.py  urls.py  wsgi.py
static/: htmx.min.js
templates/: generate_handwriting.html
